yamlkube/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: dreamrealm
  labels:
    app: gateway
    tier: backend
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: gateway
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: dreamrealm
spec:
  selector:
    matchLabels:
      app: gateway
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        tier: backend
    spec:
      containers:
        - name: gateway
          image: docker.io/dreamrealm/gateway:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
