yamlkube/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: dreamrealm
  labels:
    app: rabbitmq
    tier: backend
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: dreamrealm
spec:
  selector:
    matchLabels:
      app: rabbitmq
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
        tier: backend
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:latest
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
