yamlkube/tradingservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading
  namespace: dreamrealm
  labels:
    app: trading
    tier: backend
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: trading
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading
  namespace: dreamrealm
spec:
  selector:
    matchLabels:
      app: trading
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: trading
        tier: backend
    spec:
      containers:
        - name: trading
          image: docker.io/dreamrealm/tradingmicroservice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
